tests/urmoac/input/wkt/errors/point_broken_geometry/sources.wkt
#id;pos;[var]
1000;POINT( 0)
